# Retail-Agentic-Commerce

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  cloudbuild.yaml  docker-compose-nim.yml  docker-compose.infra.yml  docker-compose.yml  env.example  install.sh  nginx.conf  pyproject.toml  sonar-project.properties  stop.sh
.claude/commands/: setup.md
.cursor/skills/features/: SKILL.md
.cursor/skills/pre-commit-analysis/: SKILL.md
.cursor/skills/setup/: SKILL.md
.github/workflows/: blueprint-qa.yml  ci.yml
deploy/: 1_Deploy_Agentic_Commerce.ipynb  docker-deployment.md  local-development.md
docs/: PRD.md  architecture.md  features.md  project-brief.md  stack.md
docs/features/: feature-16-apps-sdk.md  feature-17-ucp-integration.md
src/agents/: AGENTS.md  Dockerfile  README.md  alloydb_search.py  pyproject.toml  register.py
src/agents/promotion-agent/: README.md  pyproject.toml
src/agents/promotion-agent/data/: mock_data.py
src/apps_sdk/: AGENTS.md  Dockerfile  README.md  __init__.py  config.py  events.py  main.py  recommendation_helpers.py  rest_endpoints.py  schemas.py
src/data/: __init__.py  product_catalog.py
src/merchant/: AGENTS.md  Dockerfile  config.py  main.py
src/payment/: Dockerfile
src/ui/: Dockerfile  env.example  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
tests/: conftest.py
tests/agents/: test_recommendation_workflow_contract.py
tests/apps_sdk/: __init__.py  conftest.py  test_acp_sessions.py  test_api.py  test_events.py  test_recommendations.py  test_tools.py
(+146 files in other folders)
