[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = ["data"]

[project]
name = "promotion-agent"
version = "0.1.0"
description = "Promotion Agent using NVIDIA NeMo Agent Toolkit for strategy selection"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "nvidia-nat-langchain==1.4.0rc3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportGeneralTypeIssues = "warning"
reportCallIssue = "warning"
